--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
             <div class="login-error" id="loginError">Email or password is incorrect!</div>
             <button class="btn btn-futuristic w-100" id="loginBtn">Login</button>
             <div class="mt-3 text-center">
-                <small class="text-muted">Default login: admin@admin.com/admin123 or user@user.com/user123</small>
+                <small class="text-muted">Attendance Crew CDC EAST Reserved by L=23-51Xe</small>
             </div>
         </div>
     </div>
