--- a/index.html
+++ b/index.html
@@ -1085,6 +1085,15 @@
             margin-bottom: 15px;
             display: none;
         }
+        
+        /* Provider text style */
+        .provider-text {
+            text-align: center;
+            margin-top: 15px;
+            font-size: 0.8rem;
+            color: #6c757d;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -1113,19 +1122,15 @@
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" value="test@example.com">
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password" value="password123">
+                <input type="password" class="form-control" id="password" placeholder="Enter password">
             </div>
             <div class="login-error" id="loginError">Email or password is incorrect!</div>
             <button class="btn btn-futuristic w-100" id="loginBtn">Login</button>
-            <div class="mt-3 text-center">
-                <small class="text-muted">Use your registered email and password</small>
-                <br>
-                <small class="text-muted">Test: test@example.com / password123</small>
-            </div>
+            <div class="provider-text">Provide by L23-51Xe</div>
         </div>
     </div>
 
