--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,7 @@
             </div>
             <div class="login-error" id="loginError">Email or password is incorrect!</div>
             <button class="btn btn-futuristic w-100" id="loginBtn">Login</button>
-            <div class="provider-text">Provide by L23-51Xe</div>
+            <div class="provider-text">Powered by L23-51Xe</div>
         </div>
     </div>
 
