Update provider text in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1612,7 +1612,7 @@
             </div>
             <div class="login-error" id="loginError">Email or password is incorrect!</div>
             <button class="btn btn-futuristic w-100" id="loginBtn">Login</button>
-            <div class="provider-text">Provide by L23-51Xe</div>
+            <div class="provider-text">L23-51xE by Kim Jong Un</div>
         </div>
     </div>
 
